--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.zipcoder.ZipChat</groupId>
     <artifactId>YouAreEll</artifactId>
     <packaging>pom</packaging>
+    <properties>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+    </properties>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Client</module>
@@ -17,6 +21,16 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>[2.9.9,)</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vzurauskas.nereides</groupId>
+            <artifactId>nereides-javax</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
         </dependency>
     </dependencies>
 </project>
